<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="elections">Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="dummy_election_name">VIP Test Election</string>
    <string name="dummy_election_date">Sun Jun 06 00:00:00 GMT +05:30 2021</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="mailing_address">Mailing Address</string>
    <string name="dummy_election_address">148 West River Street\nProvidence, Rhode Island 2904</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="address_city">City</string>
    <string name="address_state">State</string>
    <string name="use_my_location">Use my Location</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="twitter_url">Twitter URL</string>
    <string name="facebook_url">Facebook URL</string>
    <string name="web_url">Web URL</string>
    <string name="address_zip">Zip Code</string>
    <string name="location_required">Location permission is required</string>
    <string name="location_required_desc">This app needs location permission to find the representatives in your area.</string>
</resources>
