<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.android.politicalpreparedness.util.DateConverter" />

        <variable
            name="election"
            type="com.example.android.politicalpreparedness.network.models.Election" />

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@{DateConverter.toSimpleString(election.electionDay)}"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="12 November 2055" />

        <TextView
            android:id="@+id/state_header"
            style="@style/SectionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            android:text="@string/election_information"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            app:visibleIf="@{viewModel.hasElectionInformation}" />

        <TextView
            android:id="@+id/link_voting_locations"
            style="@style/LinkLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:clickable="true"
            android:text="@string/voting_locations"
            app:layout_constraintStart_toStartOf="@id/state_header"
            app:layout_constraintTop_toBottomOf="@id/state_header"
            app:visibleIf="@{viewModel.hasElectionInformation}" />

        <TextView
            android:id="@+id/link_ballot_information"
            style="@style/LinkLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:text="@string/ballot_information"
            app:layout_constraintStart_toStartOf="@id/state_header"
            app:layout_constraintTop_toBottomOf="@id/link_voting_locations"
            app:visibleIf="@{viewModel.hasElectionInformation}" />

        <TextView
            android:id="@+id/state_correspondence_header"
            style="@style/SectionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:text="@string/mailing_address"
            app:layout_constraintStart_toStartOf="@id/state_header"
            app:layout_constraintTop_toBottomOf="@id/link_ballot_information"
            app:visibleIf="@{viewModel.hasMailingAddress}" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:lineSpacingExtra="5dp"
            android:text="@{viewModel.mailingAddress}"
            app:layout_constraintStart_toStartOf="@id/state_header"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            app:visibleIf="@{viewModel.hasMailingAddress}"
            tools:text="@string/dummy_election_address" />

        <Button
            android:id="@+id/toggle_follow_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            android:onClick="@{() -> viewModel.toggleFollowElection()}"
            android:text="@{viewModel.buttonText}"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="@string/follow_election" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>