<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />

    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motion_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_representative_scene">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/address_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/cardview_light_background"
            app:cardCornerRadius="16dp"
            app:cardElevation="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/address_line_1_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_line_1"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusTopStart="16dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address_line_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/address_line_2_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/address_line_2"
                    app:layout_constraintTop_toBottomOf="@id/address_line_1_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address_line_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/address_city_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/address_city"
                    app:layout_constraintTop_toBottomOf="@id/address_line_2_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/address_zip_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="4dp"
                    android:hint="@string/address_zip"
                    app:layout_constraintEnd_toStartOf="@id/address_state_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address_city_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address_zip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:inputType="number"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/address_state_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:hint="@string/address_state"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/address_zip_layout"
                    app:layout_constraintTop_toTopOf="@id/address_zip_layout">

                    <AutoCompleteTextView
                        android:id="@+id/address_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:ellipsize="end"
                        android:maxLines="1"
                        tools:ignore="Deprecated,LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/findRepresentativesButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/find_my_representatives"
                    app:layout_constraintTop_toBottomOf="@id/address_zip_layout" />

                <Button
                    android:id="@+id/useLocationButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/use_my_location"
                    app:layout_constraintTop_toBottomOf="@id/findRepresentativesButton" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <View
            android:id="@+id/section_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="128dp"
            android:layout_marginVertical="32dp"
            app:visibleIf="@{viewModel.hasRepresentativesData}"
            android:background="@color/cardview_shadow_start_color"
            app:layout_constraintTop_toBottomOf="@id/address_form" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_representatives"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/section_divider"
            tools:itemCount="10"
            tools:listitem="@layout/layout_representative_item" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>