<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="8dp">

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/profile_picture"
            app:circularCutImage="@{representative.official.photoUrl}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_profile" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{representative.office.name}"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/profile_picture"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="U.S. Senator" />

        <ImageView
            android:id="@+id/twitter_image"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/twitter_url"
            android:src="@drawable/ic_twitter"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintVertical_bias="1"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/facebook_image"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/facebook_url"
            android:src="@drawable/ic_facebook"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/twitter_image"
            app:layout_constraintTop_toTopOf="@id/twitter_image"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/web_image"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/web_url"
            android:src="@drawable/ic_www"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/facebook_image"
            app:layout_constraintTop_toTopOf="@id/twitter_image"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/representative_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{representative.official.name}"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/web_image"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:text="Kamala Harris" />

        <TextView
            android:id="@+id/party_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{representative.official.party}"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/web_image"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/representative_name"
            tools:text="Democratic Party" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>